--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
-{
-  "buildCommand": "npx vite build",
-  "outputDirectory": "dist"
-}
+  "installCommand": "npm install",
+  "buildCommand": "npm run build --legacy-peer-deps",
+  "outputDirectory": "dist",
+  "framework": "vite"
